<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="18dp">

                <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_image" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/news_source"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:text="@string/source_name"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/news_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/published_date"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/news_headline"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/news_description"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/circular_imageview">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/news_author" />

                </LinearLayout>

                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:text="@string/author_name"
                    android:textSize="11sp" />

                <ImageButton
                    android:id="@+id/bookmark_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@null"
                    android:src="@drawable/heart" />

                <ImageButton
                    android:id="@+id/share_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="11dp"
                    android:background="@null"
                    android:src="@drawable/share" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>